<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <include
        layout="@layout/app_bar_drawermenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapActivity" >

        <fragment

            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.aittaleb.abdelhamid.taximobile.MapsActivity"
            />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"

            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locations"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:background="#ffffff"

            />




            <android.support.design.widget.TextInputLayout
                        android:id="@+id/pickuplayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5px"
                        android:layout_marginBottom="5px"
                        android:layout_marginRight="10px"
                        android:layout_marginLeft="10px"
                       >
                        <EditText android:id="@+id/pickup"
                            android:background="#ffffff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/pickupadress"
                            android:drawableLeft="@drawable/pickmarker"
                            />
                    </android.support.design.widget.TextInputLayout>







            <android.support.design.widget.TextInputLayout
                android:id="@+id/arrivallayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5px"
                android:layout_marginBottom="5px"
                android:layout_marginRight="10px"
                android:layout_marginLeft="10px"
                >
                <EditText android:id="@+id/arrival"
                    android:background="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="Destination"
                    android:drawableLeft="@drawable/finishflag"
                    />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/commentlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5px"
                android:layout_marginBottom="5px"
                android:layout_marginRight="10px"
                android:layout_marginLeft="10px"
                >
                <EditText android:id="@+id/comment"
                    android:background="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/commenter"
                    android:drawableLeft="@drawable/comments"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#FFFF00"
            android:text="Confirm"
            android:textColor="#000000"
            android:textStyle="bold"
            android:onClick="onMapSearch"/>




    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_drawermenu"
        app:menu="@menu/activity_drawermenu_drawer" />

</android.support.v4.widget.DrawerLayout>

